--- a/package.json
+++ b/package.json
@@ -3,24 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/styled": "^11.3.0",
-    "@mui/icons-material": "^5.0.1",
-    "@mui/material": "^5.0.1",
-    "@nivo/core": "^0.73.0",
-    "@nivo/line": "^0.73.0",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.9",
+    "@mui/material": "^5.11.10",
+    "@nivo/core": "^0.80.0",
+    "@nivo/line": "^0.80.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "date-fns": "^2.29.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
-    "run-firefox": "cd ./build && web-ext run",
     "build": "react-scripts build",
+    "run-firefox": "cd ./build && web-ext run",
     "build-firefox": "react-scripts build && mv ./build/manifest-firefox.json ./build/manifest.json && rm ./build/manifest-chrome.json",
     "build-chrome": "react-scripts build && mv ./build/manifest-chrome.json ./build/manifest.json && rm ./build/manifest-firefox.json",
     "test": "react-scripts test",
